Completed mobile view CSS at 500px

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Great Idea</title> 
   <title>Great Idea!</title>
@@ -16,15 +16,19 @@
 
 <body>
   <div id="container">
-      <div class="navBar">
+      <header>
+          <div class="navBar">
             <div class="navSpace"><a href="./services.html">Services</a></div>    
             <div class="navSpace"><a href="./product.html">Product</a></div>
             <div class="navSpace">Vision</div>
             <div class="navSpace">Features</div>
             <div class="navSpace">About</div>
             <div class="navSpace">Contact</div>
-            <a href="./index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
-      </div>
+          </div>
+          <div class="logo">
+            <a href="./index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+          </div>
+      </header>
     
     <div class="jumbotron">
     <div class="jumbotron left">
@@ -67,9 +71,9 @@
     <section class="contact"> 
       <h2>Contact</h2>
     <address> Way 456 Street <br>
-    Somewhere, USA<br><br>
+    Somewhere, USA<br>
     1 (888) 888-8888<br>
-    <br><br>
+    <br>
     sales@greatidea.io<br>
   </address>
         </section>
