--- a/services.html
+++ b/services.html
@@ -16,15 +16,19 @@
 
 <body>
   <div id="container">
-      <div class="navBar">
-            <div class="navSpace"><a href="./services.html"">Services</a></div>    
+      <header>
+          <div class="navBar">
+            <div class="navSpace"><a href="./services.html">Services</a></div>    
             <div class="navSpace"><a href="./product.html">Product</a></div>
             <div class="navSpace">Vision</div>
             <div class="navSpace">Features</div>
             <div class="navSpace">About</div>
             <div class="navSpace">Contact</div>
-            <a href="./index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
-      </div>
+          </div>
+          <div class="logo">
+            <a href="./index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+          </div>
+      </header>
       <img class="service-img" src="img/services-header.jpg">
       <section>
         <h2>Services</h2>
